# VibeFire-Airsoft-AEG-ETU-made-with-only-AI

./: .gitignore  README.md  platformio.ini
AutoTrigger/: .clang-format  CMakeLists.txt  README.md  README_EN.md
AutoTrigger/.omo/plans/: architecture.md
AutoTrigger/.omo/run-continuation/: ses_195b966b8ffep1V1pNYe5jTGUL.json  ses_19af99500ffe0anLliHjzELQaI.json
AutoTrigger/cmake/: FindTensorRT.cmake  aarch64-linux-gnu.cmake
AutoTrigger/docs/: ASSEMBLY_GUIDE.md
AutoTrigger/include/autotrigger/: ballistics.h  calibrate.h  display.h  kalman_filter.h  pipeline.h  ranging.h  safety.h  trigger.h  yolo_infer.h
AutoTrigger/include/autotrigger/hal/: config.h  icamera.h  idisplay.h  ifire_output.h  iranging.h  itrigger.h
AutoTrigger/scripts/: deploy.sh  generate_drop_table.py  setup_rk3566.sh
AutoTrigger/src/: ballistics.cpp  calibrate.cpp  display.cpp  kalman_filter.cpp  main.cpp  pipeline.cpp  platform_config.cpp  ranging.cpp  safety.cpp  trigger.cpp  yolo_infer.cpp
AutoTrigger/tests/: CMakeLists.txt  test_ballistics.cpp  test_display.cpp  test_kalman.cpp  test_pipeline.cpp  test_ranging.cpp  test_safety.cpp  test_sanity.cpp  test_trigger.cpp  test_yolo.cpp
docs/: FCU装配手册.md  接线图与装配指南.md  火控设计文档.md
firmware/: fire_control.ino
sim/: fcu_simulator.html
src/: fire_control.ino
wokwi/: README.md  diagram.json  fire_control.ino
